# philosophers

./: .gitignore  CMakeLists.txt  README.md
philo_one/: Makefile  exit_func.c  ft_atoi.c  ft_itoa.c  main.c  monitor.c  philo_one.h  philo_thread.c  print.c  utils.c  validate_init.c
philo_three/: Makefile  exit_func.c  ft_atoi.c  ft_itoa.c  main.c  monitor.c  philo_process.c  philo_three.h  print.c  utils.c  validate_init.c
philo_two/: Makefile  exit_func.c  ft_atoi.c  ft_itoa.c  main.c  monitor.c  philo_thread.c  philo_two.h  print.c  utils.c  validate_init.c
